# energy-pipeline

./: .aiexclude  .env.example  .gitignore  .tool-versions  Authenticate.bru  Current Ele Readings.bru  Current Gas Readings.bru  Ele Readings.bru  Gas Readings.bru  README.md  VE Resources.bru  Virtual Entities.bru  bruno.json  collection.bru  copilot-instructions.md  go.sh  improvements.md  justfile  pyproject.toml  pytest.ini  requirements.txt
bruno/: collection.bru
bruno/entities/: VE Resources.bru
bruno/environments/: prod.bru
bruno/readings/: Current Ele Readings.bru  Ele Readings.bru  Gas Readings.bru
docs/: energy-pipeline.excalidraw
entities/: folder.bru
pipeline/: __main__.py
pipeline/data_processing/: __init__.py  energy_data_converter.py  glowmarkt_jsonl_converter.py  jsonl_converter.py  parquet_converter.py  yearly_jsonl_converter.py
pipeline/data_retrieval/: __init__.py  batch_retrieval.py  glowmarkt_client.py  n3rgy_csv_client.py  retrieve.py
pipeline/data_retrieval/resources/: ele-consumption.json  gas-consumption.json
pipeline/data_visualisation/: energy_efficiency.py  monthly_resource_pair_charts.py
pipeline/tests/: conftest.py  test_batch_retrieval.py  test_glowmarkt_client.py  test_retrieve.py
pipeline/tests/data_processing/: conftest.py  (+5 more)
pipeline/ui/: base_ui.py  data_converter_ui.py  data_retrieval_ui.py  glowmarkt_interactive.py  menu_ui.py  parquet_converter_ui.py  visualization_ui.py
pipeline/utils/: credentials.py
readings/: Current Gas Readings.bru  Ele Readings.bru  Gas Readings.bru  folder.bru
(+9 files in other folders)
