[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "energy-pipeline"
version = "0.1.0"
description = "Energy data processing pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tobias Vogel", email = "your.email@example.com"},
]
dependencies = [
    "pandas",
    "pyarrow",
    "python-dotenv",
    "matplotlib",
    "requests",
    "python-dateutil",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
energy-pipeline = "pipeline.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]